--- a/public_html/index.htm
+++ b/public_html/index.htm
@@ -4,9 +4,13 @@
 <head>
     <meta charset="utf-8">
     <title>Incendie</title>
+
+    <link rel="stylesheet" href="css/main.css">
+
     <script src="javascript/jquery-2.2.1.min.js"></script>
     <script src="javascript/tiles.js"></script>
     <script src="javascript/main.js"></script>
+
 </head>
 <body>
 
