--- a/public_html/builder.htm
+++ b/public_html/builder.htm
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="css/builder.css">
 
     <script src="javascript/jquery-2.2.1.min.js"></script>
+    <script src="javascript/jsonpack.js"></script>
     <script src="javascript/tiles.js"></script>
     <script src="javascript/builder.js"></script>
+
 
 </head>
 <body>
@@ -51,6 +53,11 @@
         <label><input type='checkbox' id='viewLayer' /> Transparents</label><br>
 
 
+        <br />
+
+        <button id="btnSave" style="width:100%">Save</button><br />
+        <input type="file" id="file-input" style="width:100%"/>
+
     </div>
     <div style="width:90%; height:600px; border:1px solid #000; overflow:auto; float:right;">
         <canvas width="2500" height="2500"></canvas>
@@ -59,7 +66,6 @@
     <div style="width:100%; height:300px; border:1px solid #000; overflow:auto;">
         <img id="tiles" data-file="tilesheet_complete.png" src="images/tilesheet_complete.png">
     </div>
-
 
 </body>
 </html>
