--- a/server.htm
+++ b/server.htm
@@ -168,7 +168,7 @@
                 peer_player_name = $('#input_player_name').val();
                 map_file = $('#input_map_file').val();
 
-                map = new Map('https://raw.githubusercontent.com/mboulette/incendie/master/public_html/' + map_file);
+                map = new Map('http://mboulette.16mb.com/' + map_file);
 
                 peer_server_name = $('#input_server_name').val();
                 peer_player_name = $('#input_player_name').val();
