Ajouter des flames

--- a/builder.htm
+++ b/builder.htm
@@ -70,10 +70,14 @@
     </div>
 
     <div id="toolAction" style="width:100%; height:300px; border:1px solid #000; overflow:auto; padding:4px; display:none;">
-        <button class="btn-starting red" data-color="red">Départ Rouge</button>
-        <button class="btn-starting purple" data-color="purple">Départ Mauve</button> 
-        <button class="btn-starting green" data-color="green">Départ Vert</button> 
-        <button class="btn-starting blue" data-color="blue">Départ Bleu</button> 
+        <button class="btn-starting red" data-color="red"></button>
+        <button class="btn-starting purple" data-color="purple"></button> 
+        <button class="btn-starting green" data-color="green"></button> 
+        <button class="btn-starting blue" data-color="blue"></button>
+
+        <button class="btn-fireon tiny"   data-size="tiny"></button>
+        <button class="btn-fireon small"  data-size="small"></button>
+        <button class="btn-fireon medium" data-size="medium"></button>
     </div>
 
 
