--- a/client.htm
+++ b/client.htm
@@ -11,6 +11,7 @@
     <script src="http://cdn.peerjs.com/0.3/peer.min.js"></script>
     <script src="javascript/jsonpack.js"></script>
     <script src="javascript/tiles.js"></script>
+    <script src="maps/map1.js"></script>
     <script src="javascript/map.js"></script>
     <script>
 
@@ -102,8 +103,8 @@
         };
 
         $( document ).on('AssetLoad', function(e, current, total){
-            console.log(current, players.length, map);
-            if (current == total && players.length > 0 && map) {
+            console.log(current, total, players.length, map);
+            if (current == total && map) {
                 main();
             }
         });
@@ -127,6 +128,7 @@
 
             $(document).on('peer.load_map', function(e, data){
                 map = new Map('http://mboulette.16mb.com/' + data.map);
+                assets.test();
             });
 
             $(document).on('peer.upd_players', function(e, data){
