--- a/dungeon/index.htm
+++ b/dungeon/index.htm
@@ -114,7 +114,7 @@
 
                 // create a built-in "ground" shape; its constructor takes the same 5 params as the sphere's one
                 var ground = BABYLON.Mesh.CreateGround('ground1', 40, 40, 2, scene);
-                ground.diffuseTexture = new BABYLON.Texture("images/stone157.jpg", scene);
+                ground.diffuseTexture = new BABYLON.Texture("http://mboulette.16mb.com/dungeon/images/stone157.jpg", scene);
                 //createGround(scene);
 
 
